--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql://postgres:admin@localhost:5432/simplilatam
+TEST_DATABASE_URL=postgresql://postgres:admin@localhost:5432/simplilatam_test
